[gd_scene load_steps=5 format=2]

[ext_resource path="res://Scripts/TileMapEditorWindow.gd" type="Script" id=1]
[ext_resource path="res://TileSets/pico8x8tileset2.tres" type="TileSet" id=3]
[ext_resource path="res://Icons/startPos.png" type="Texture" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 523.5, 308 )

[node name="TileMapEditorWindow" type="Node2D" groups=["tilemapEditorWindow"]]
script = ExtResource( 1 )

[node name="Node2D" type="Node2D" parent="."]

[node name="roomSize" type="Control" parent="."]
mouse_filter = 2
__meta__ = {
"_edit_group_": true
}

[node name="bgB" type="Sprite" parent="roomSize"]
centered = false

[node name="bgA" type="Sprite" parent="roomSize"]
centered = false

[node name="TileMap" type="TileMap" parent="roomSize"]
modulate = Color( 1, 1, 1, 0.905882 )
tile_set = ExtResource( 3 )
cell_size = Vector2( 16, 16 )
cell_quadrant_size = 8
cell_custom_transform = Transform2D( 0, 0, 0, 0, 0, 0 )
format = 1
__meta__ = {
"_edit_lock_": true
}

[node name="tempTileMap" type="TileMap" parent="roomSize"]
modulate = Color( 1, 1, 1, 0.905882 )
tile_set = ExtResource( 3 )
cell_size = Vector2( 8, 8 )
cell_quadrant_size = 8
cell_custom_transform = Transform2D( 0, 0, 0, 0, 0, 0 )
format = 1
__meta__ = {
"_edit_lock_": true
}

[node name="EntityList" type="Node2D" parent="roomSize"]

[node name="startPos" type="Sprite" parent="roomSize"]
modulate = Color( 1, 1, 1, 0.529412 )
position = Vector2( -340, -179 )
texture = ExtResource( 4 )

[node name="Camera2D" type="Camera2D" parent="."]
anchor_mode = 0
current = true
editor_draw_screen = false
__meta__ = {
"_edit_lock_": true
}

[node name="Area2D" type="Area2D" parent="."]
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 513.5, 298 )
shape = SubResource( 1 )

[connection signal="mouse_entered" from="Area2D" to="." method="_on_Area2D_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_Area2D_mouse_exited"]
